--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,9 @@
     <string name="language">Language</string>
     <string name="alarm">Alarm</string>
     <string name="tracking_before">Track your sleep</string>
+    <string name="tracking_after">Stop the track</string>
+    <string name="play">Play</string>
+    <string name="stop">Stop</string>
     <string name="title_home">Home</string>
     <string name="title_sleeptrack">Sleep Track</string>
     <string name="title_profile">Profile</string>
@@ -28,4 +31,20 @@
     <string name="back_to_home">Tap to back home</string>
     <string name="day">Day</string>
     <string name="date">%1$d</string>
+    <string-array name="result">
+        <item>Low Stress Level</item>
+        <item>Mild Stress Level</item>
+        <item>Moderate Stress Level</item>
+        <item>High Stress Level</item>
+        <item>Severe Stress Level</item>
+    </string-array>
+    <string-array name="result_description">
+        <item>Maintaining a balanced routine is key. Prioritize self-care activities such as exercise, meditation, and adequate sleep. Set clear boundaries between work and personal life to prevent stress from seeping into your downtime.</item>
+        <item>Practice effective time management. Break tasks into manageable chunks and prioritize based on urgency and importance. Communicate openly with colleagues and seek support when needed. Remember to take short breaks throughout the day to recharge.</item>
+        <item>Embrace stress-reducing techniques such as deep breathing exercises, journaling, or engaging in hobbies. Delegate tasks or ask for help when overwhelmed. Explore stress management workshops or resources to learn new coping strategies.</item>
+        <item>Focus on self-care and stress reduction. Consider talking to a trusted friend, mentor, or therapist to gain perspective and support. Prioritize and delegate tasks, and communicate openly with your team about your workload. Practice self-compassion and recognize that it\'s okay to ask for help.</item>
+        <item>Seek professional help if stress becomes overwhelming. Consult a healthcare provider or therapist who can guide you through personalized stress management techniques. Prioritize self-care and take time off, if necessary. Reach out to support networks for assistance during this challenging time.</item>
+    </string-array>
+
+
 </resources>
