--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,12 +30,7 @@
     <string name="date">%1$d</string>
     <string name="start_recording">Start Record</string>
     <string name="stop_recording">Stop Record</string>
-    <string name="play_audio">Play Audio</string>
-    <string name="start_playing">Start Playing</string>
-    <string name="stop_playing">Stop Playing</string>
     <string name="tracking_after">Stop Tracking</string>
-    <string name="play">Play</string>
-    <string name="stop">Stop</string>
     <string name="one_result">Low Stress Level</string>
     <string name="two_result">Mild Stress Level</string>
     <string name="three_result">Moderate Stress Level</string>
@@ -48,8 +43,17 @@
     <string name="five_desc">Seek professional help if stress becomes overwhelming. Consult a healthcare provider or therapist who can guide you through personalized stress management techniques. Prioritize self-care and take time off, if necessary. Reach out to support networks for assistance during this challenging time.</string>
     <string name="failure">Can not detect the result</string>
     <string name="failure_desc">Oops! Sorry, we are unable to detect the insight from the result. Please try again.</string>
-    <string name="sleep_time_hrs">%1$d hrs</string>
+    <string name="sleep_time_hrs">%1$d s</string>
     <string name="snore_count">%1$d</string>
+    <string name="tidur_lelap">Tidur Lelap</string>
+    <string name="sign_in">Sign In</string>
+    <string name="e_mail">E-mail</string>
+    <string name="email_text">Please Input your email address</string>
+    <string name="password">Password</string>
+    <string name="password_text">Please Input your password</string>
+    <string name="username">Username</string>
+    <string name="username_text">Please Input your username</string>
+    <string name="have_acc">Already have an account?</string>
 
 
 </resources>
